# QView

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DivisionPage.tsx  Dockerfile  README.md  README.md.create-rust-app  betarun  build.rs  getdependencies  getrustdev  getrustdev.sh  package.json  setup-db-valkey.sh
backend/: main.rs  schema.rs
backend/graphql/: mod.rs
backend/models/: apicalllog.rs  common.rs  division.rs  eventlog.rs  game.rs  mod.rs  quizevent.rs  room.rs  roominfo.rs  schedule.rs  scoreevent.rs  tdrrinfo.rs  todo.rs  tournament.rs
backend/services/: division.rs  mod.rs  namelist.rs  pingmsg.rs  roominfo.rs  scoreevent.rs  todo.rs  tournament.rs
backend/views/: index.html
config/: logging_debug.yaml  logging_prod.yaml
docs/: CSVDOCS  breadcrumbs
frontend/: getdependencies  package.json
frontend/bundles/: index.tsx
frontend/src/: App.css  App.tsx  breadcrumb.tsx  setupDevelopment.tsx  store.tsx
migrations/00000000000003_plugin_auth/: down.sql
migrations/00000000000004_plugin_storage/: down.sql
migrations/2022-07-17-143433_create_games/: down.sql  up.sql
migrations/2022-07-22-182352_add_ruleset/: down.sql  up.sql
migrations/2022-09-21-173540_create_tournament_table/: down.sql  up.sql
migrations/2022-09-22-024848_add_info_to_tournaments/: down.sql  up.sql  up.sql.good
migrations/2022-09-25-020407_rebuild_tournament/: #up.sql#  up.sql
migrations/2022-09-30-203708_reduce_tournament_id/: up.sql  up.sql~
migrations/2022-10-07-205039_update_games_unique/: up.sql
migrations/2022-10-20-163148_tournaments_shortinfo/: down.sql  up.sql
migrations/2022-10-20-175758_create_divisions/: down.sql  up.sql
migrations/2022-10-20-183912_tournament_fixup/: down.sql  up.sql
migrations/2022-10-20-214032_divisions_notnull_fix/: down.sql  up.sql
migrations/2022-10-21-152735_add_schedule_table/: down.sql  up.sql
migrations/2022-10-23-122947_fixup_games_quizzes/: down.sql  up.sql
migrations/2022-10-25-195847_eventlog_creation/: down.sql  up.sql
migrations/2022-10-25-204648_apicalllog_creation/: down.sql  up.sql
migrations/2022-11-03-210523_games_remove_nulls/: down.sql  up.sql
migrations/2022-11-03-223037_quizevents_remove_nulls/: down.sql  up.sql
migrations/2022-11-09-024235_remove_tdrri/: down.sql  up.sql
migrations/2022-11-17-032356_eventlogs_size_increase/: down.sql  up.sql
migrations/2022-11-17-170929_eventlog_size2_increase/: down.sql  up.sql
test-scripts/: populate-divisions.sql  populate-testdata.sh  populate-testdata.sql  populate-tournaments.sql
(+36 files in other folders)
