[[bin]]
name = "fullstack"
path = ".cargo/bin/fullstack.rs"

[[bin]]
name = "tsync"
path = ".cargo/bin/tsync.rs"

[[bin]]
name = "qview"
path = "backend/main.rs"

[dependencies]
actix-files = "0.6.0"
actix-http = "3.0.0"
actix-multipart = "0.4.0"
actix-web = "4.0.1"
async-graphql = "3.0.38"
futures-util = "0.3.21"
jsonwebtoken = "8.1.0"
async-graphql-actix-web = "3.0.38"
serde_json = "1.0.79"
tsync = "1.2.1"

[dependencies.chrono]
features = ["serde"]
version = "0.4.19"

[dependencies.create-rust-app]
features = ["plugin_dev", "plugin_auth", "plugin_container", "plugin_storage", "plugin_graphql", "backend_actix-web"]
version = "8.0.0"

[dependencies.diesel]
default-features = false
features = ["postgres", "r2d2", "chrono"]
version = "2.0.0"

[dependencies.serde]
features = ["derive"]
version = "1.0.133"

[dependencies.tokio]
features = ["full"]
version = "1"

[package]
default-run = "qview"
edition = "2021"
name = "qview"
publish = false
version = "0.1.0"
[profile.dev]
debug-assertions = true
