[[bin]]
name = "fullstack"
path = ".cargo/bin/fullstack.rs"

[[bin]]
name = "tsync"
path = ".cargo/bin/tsync.rs"

[[bin]]
name = "qview"
path = "backend/main.rs"


[dependencies]
actix-files = "0.6.0"
actix-http = "3.0.0"
actix-multipart = "0.4.0"
actix-web = "4.0.1"
async-graphql = "3.0.38"
dotenv = "0.15.0"
env_logger = "0.9.1"
log = "0.4"
futures-util = "0.3.21"
jsonwebtoken = "8.1.0"
time = "0.3.14"
async-graphql-actix-web = "3.0.38"
serde_json = "1.0.79"
tsync = "1.2.1"
qstring = "0.7.2"
syslog = "6.0.0"

[dependencies.chrono]
features = ["serde"]
version = "0.4.19"

[dependencies.create-rust-app]
features = ["plugin_dev", "plugin_auth", "plugin_container", "plugin_storage", "plugin_graphql", "backend_actix-web"]
version = "8.0.0"

[dependencies.diesel]
default-features = false
features = ["postgres", "r2d2", "chrono", "time", "32-column-tables", "uuid"]
version = "2.0.0"

[dependencies.uuid]
version = "1.2.0"
features = [ "v4", "fast-rng", "macro-diagnostics", "serde" ]

[dependencies.serde]
features = ["derive"]
version = "1.0.133"

[dependencies.tokio]
features = ["full"]
version = "1"

[package]
default-run = "qview"
edition = "2021"
name = "qview"
publish = false
version = "0.1.1"
authors = [ 'b.nicholson@niceng.com" ]
description = "Manage Quizzing Tournaments"
license = "AGPL"
repository = "https://github.com/bnicholson/qview"
keywords = ["Qview", "Quizzing"]

[profile.dev]
debug-assertions = true
